--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -158,24 +158,25 @@
 
         @@keyframes heartbeat {
             from {
-                opacity: 0;
-                transform: scale(0.9);
+                opacity: 0.3;
+                transform: scale(0.32);
             }
 
             to {
                 opacity: 1;
-                transform: scale(1.6);
+                transform: scale(0.40);
             }
         }
         .centercontent {
             position: absolute;
             max-width: 100%;
             height: auto;
-            top: 50%;
+            top: 65%;
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 5;
         }
+        
     </style>
     <script type="text/javascript">
         function showHideRow(row) {
@@ -187,11 +188,11 @@
 </head>
 
 <body onclose="close()">
-    <div class="centercontent" id="spinner" style="display:none">
-        <div class="heart"><img src="~/images/novasaydam.png" style="max-width:5vw" /></div>
+    <div class="centercontent" id="spinner" style="display:unset">
+        <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
     </div>
     <div class="centercontent" id="spinner1" style="display:none">
-        <div class="heart"><img src="~/images/novasaydam.png" style="max-width:5vw" /></div>
+        <div class="heart"><img src="~/images/novasaydam.png" style="max-width:15vw" /></div>
     </div>
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
@@ -1261,6 +1262,7 @@
                 placeholder: "Döviz Tipi"
 
             });
+            $("#spinner").hide();
         });
     </script>
     <script>
