--- a/NOVA/Views/Sevkiyat/Test.cshtml
+++ b/NOVA/Views/Sevkiyat/Test.cshtml
@@ -60,7 +60,7 @@
         }
     </style>
 </head>
-<body>
+@*<body>
     <div class="jumbotron vertical-center">
         <div class="container-fluid">
             <div id="employeeTableWrapper" class="tableWrapper table-responsive">
@@ -218,5 +218,8 @@
 
             })
         </script>
+</body>*@
+<body>
+    
 </body>
 </html>
