--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -41,7 +41,16 @@
        
         var listfk = [];
         var list = [];
-      
+        var listEfece4 = [];
+        var excellist = [];
+        var tumliste2 = null;
+        var sabit = 0;
+        async function getExcelAsync() {
+
+            let response = await fetch(`http://192.168.2.13:83/api/exceltest`);
+            let data = await response.json()
+            return data;
+        }
         
     </script>
 </head>
@@ -93,6 +102,7 @@
                         </div>
                     </div>
                 </div>
+                
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
