--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -37,6 +37,16 @@
                         <div data-i18n="Without menu">Stok</div>
                     </a>
                 </li>
+                <li class="menu-item" id="fiyatlistesi" style="font-weight:normal;display: @ViewBag.DisplayFiyatListesi">
+                    <a href="@Url.Action("FiyatListesi", "Satis")" class="menu-link" id="musiliskiyon">
+                        <div data-i18n="Without menu">Fiyat Listesi</div>
+                    </a>
+                </li>
+                <li class="menu-item" id="fiyatyonetimi" style="display: @ViewBag.FiyatYonetim">
+                    <a href="@Url.Action("FiyatYonetimi", "Satis")" class="menu-link">
+                        <div data-i18n="Without menu">Fiyat Yönetimi</div>
+                    </a>
+                </li>
                 <li class="menu-item" id="detaylisip" style="display: @ViewBag.DisplaySiparis">
                     <a href="@Url.Action("DetayliSiparis", "Satis")" class="menu-link">
                         <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
@@ -58,6 +68,7 @@
                         <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                     </a>
                 </li>
+
             </ul>
         </li>
         <li id="sevkiyat" class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
