--- a/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
+++ b/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
@@ -68,13 +68,13 @@
 
         @@keyframes heartbeat {
             from {
-                opacity: 0;
-                transform: scale(0.9);
+                opacity: 0.3;
+                transform: scale(0.32);
             }
 
             to {
                 opacity: 1;
-                transform: scale(1.6);
+                transform: scale(0.40);
             }
         }
 
@@ -82,7 +82,7 @@
             position: absolute;
             max-width: 100%;
             height: auto;
-            top: 50%;
+            top: 65%;
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 5;
@@ -179,28 +179,19 @@
             background-size: 100%;
         }
     </style>
-    <style>
-        .centercontent {
-            position: absolute;
-            max-width: 100%;
-            height: auto;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 5;
-        }
-    </style>
+
+   
     <script type="text/javascript">
         function showHideRow(row) {
             $("#" + row).toggle("fast");
         }
-
-
     </script>
 </head>
 
 <body onclose="close()">
-    
+    <div class="centercontent" id="spinner" style="display:unset">
+        <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
+    </div>
     <script>
 
        var userData = [];
@@ -1630,6 +1621,7 @@
                 placeholder: "Cari İsim"
 
             });
+            $("#spinner").hide();
         });
     </script>
     <script>
