--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -28,6 +28,21 @@
 
 
     <style>
+        .heart {
+            animation: heartbeat 1s infinite alternate;
+        }
+
+        @@keyframes heartbeat {
+            from {
+                opacity: 0.3;
+                transform: scale(0.32);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(0.40);
+            }
+        }
         tr {
             cursor: pointer;
         }
@@ -128,13 +143,13 @@
 
         @@keyframes heartbeat {
             from {
-                opacity: 0;
-                transform: scale(0.9);
+                opacity: 0.3;
+                transform: scale(0.32);
             }
 
             to {
                 opacity: 1;
-                transform: scale(1.6);
+                transform: scale(0.40);
             }
         }
 
@@ -152,8 +167,8 @@
     <script src="~/assets/vendor/css/scripts.js"></script>
 </head>
 <body style="background-color: #f5f5f9 !important;font-size:12px !important;overflow:hidden">
-    <div class="centercontent" id="spinner" style="display:none">
-        <div class="heart"><img src="~/images/novasaydam.png" style="max-width:5vw" /></div>
+    <div class="centercontent" id="spinner">
+        <div class="heart"><img src="~/images/novasaydam.png" style="max-width:15vw" /></div>
     </div>
     <div class="container-fluid mt-2">
 
@@ -875,6 +890,7 @@
                 placeholder: "Döviz Tipi"
 
             });
+            $("#spinner").hide();
         });
     </script>
 
