--- a/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
+++ b/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
@@ -37,39 +37,37 @@
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
-        var stoklar = null;
-        async function getstokAsync() {
-            var url = "http://192.168.2.13:83/api/stok/giriscikis/";
-            let response = await fetch(url);
-            let data = await response.json()
-            return data;
+        var sabit2 = 0;
+         async function getUserAsync() {
+    let response = await fetch(`@Url.Action("GetUser", "Satis")`);
+    let data = await response.json()
+    return data;
         }
-        var stokfiatlar = null;
-        async function getstokfiatAsync() {
-            var url = "http://192.168.2.13:83/api/stok/stokfiat";
-            let response = await fetch(url);
-            let data = await response.json()
-            return data;
+        async function getFiyatlarAsync() {
+            let response = await fetch("http://192.168.2.13:83/api/fiyat/exec/000000000000001");
+    let data = await response.json()
+    return data;
         }
+        async function getFiyatAsync(fiyatkodu,toptan,perakende,value) {
+            var url = "http://192.168.2.13:83/api/fiyat/" + fiyatkodu + "/" + toptan.replace(',', '.') + "/" + perakende.replace(',', '.')+"/"+value
+    let response = await fetch(url);
+    let data = await response.json()
+    return data;
+        }
+          async function getRoleAsync() {
+              let response = await fetch('http://192.168.2.13:83/api/roles');
+    let data = await response.json()
+    return data;
+    }
+        var users = null;
+        var roles = null;
+        var fiyatlar = null;
+        var tablosabit = 0;
     </script>
-    
 </head>
 <body>
-    <script>
-        
-        Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: '<span style="font-size:30px">Yayınlanan tüm fiyatlar KDV hariçtir!</span>',
-            showConfirmButton: false,
-            timerProgressBar: true,
-            allowOutsideClick: false,
-            allowEscapeKey: false,
-            timer: 5500
-        })
-    </script>
+
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
@@ -116,9 +114,7 @@
                         </div>
                     </div>
                 </div>
-               
                 @RenderBody()
-
                 <!-- / Content -->
                 <!-- Footer -->
                 <footer class="content-footer footer bg-footer-theme mb-0">
@@ -147,9 +143,13 @@
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-   <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
-
-
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tablednd@1.0.5/dist/jquery.tablednd.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.min.js"></script>
+    <script src="~/jsPDF/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.core.min.js"></script>
 
 
     <!-- Core JS -->
@@ -160,11 +160,8 @@
     <!-- endbuild -->
     <!-- Main JS -->
     <script type="text/javascript" src="/assets/js/main.js"></script>
-
     <!-- Page JS -->
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
-
-
 
     @RenderSection("scripts", required: false)
 </body>
