--- a/NOVA/Views/Login/Login.cshtml
+++ b/NOVA/Views/Login/Login.cshtml
@@ -203,6 +203,7 @@
                                            style="color: #0e387a" />
                                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide" style="color: #0e387a"></i></span>
                                 </div>
+                                <input style="display:none" type="text" name="defurl" id="defurl"/>
                             </div>
 
 
@@ -258,7 +259,11 @@
 
 
     </div>
-
+    <script>
+        var currentLocation = window.location;
+        document.getElementById("defurl").value = "~/"+currentLocation.toString().split("%2f")[1] + "/"+currentLocation.toString().split("%2f")[2];
+       
+    </script>
 
     <div class="modal fade" id="mail" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
