--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -346,14 +346,14 @@
                 html: true,
                 placement: 'bottom',
                 sanitize: false,
-                content: function () { return '<div id="PopoverContent"><div class="input-group"><textarea name="' + $(this).attr('data-fiyat') + '" type="text" class="form-control">' + ($(this).attr('data') == "null" ? "" : $(this).attr('data').replace("::","\n")) + '</textarea></div></div><button type="button" onclick="btnclick()" class="btn btn-secondary btn-sm mb-1 mt-1 float-sm-end">Kaydet</button></div>'; }
+                content: function () { return '<div id="PopoverContent"><div class="input-group"><textarea name="' + $(this).attr('data-fiyat') + '" type="text" class="form-control">' + ($(this).attr('data') == "null" ? "" : $(this).attr('data').replaceAll("::","\n")) + '</textarea></div></div><button type="button" onclick="btnclick()" class="btn btn-secondary btn-sm mb-1 mt-1 float-sm-end">Kaydet</button></div>'; }
 
             });
 
         })
 
         function btnclick() {
-            var value = event.currentTarget.parentNode.getElementsByTagName("textarea")[0].value.replace("\n","::");
+            var value = event.currentTarget.parentNode.getElementsByTagName("textarea")[0].value.replaceAll("\n","::");
 
             var name = event.currentTarget.parentNode.getElementsByTagName("textarea")[0].name;
                 if (value == "" || value ==null) {
