--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -52,17 +52,11 @@
                         <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
                     </a>
                 </li>
-                <li class="menu-item" id="fabstokfiyatli" style="font-weight:normal;display: @ViewBag.DisplayFiyatliStok">
+                <li class="menu-item" id="fabstokfiyatli" style="font-weight:normal;display: @ViewBag.DisplayFiyatsizStok">
                     <a href="@Url.Action("HammaddeListesi", "Satis")" class="menu-link">
-                        <div data-i18n="Without menu">* Fabrika Stok</div>
-                    </a>
-                </li>
-                <li class="menu-item" id="fabstok" style="font-weight:normal;display: @ViewBag.DisplayFiyatsizStok">
-                    <a href="@Url.Action("FiyatsizHammaddeListesi", "Satis")" class="menu-link">
                         <div data-i18n="Without menu">Fabrika Stok</div>
                     </a>
                 </li>
-
                 <li class="menu-item" id="ziyaretplanlari" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link" id="musiliskiyon">
                         <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
