--- a/NOVA/Views/Shared/_Layout.cshtml
+++ b/NOVA/Views/Shared/_Layout.cshtml
@@ -54,11 +54,11 @@
             return data;
         }
     </script>
-    
+
 </head>
 <body>
     <script>
-        
+
         Swal.fire({
             position: 'center',
             icon: 'warning',
@@ -68,6 +68,8 @@
             allowOutsideClick: false,
             allowEscapeKey: false,
             timer: 5500
+        }).then(function () {
+            $(".bx-info-circle").popover();
         })
     </script>
     <div class="layout-wrapper layout-content-navbar">
@@ -116,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-               
+
                 @RenderBody()
 
                 <!-- / Content -->
@@ -140,16 +142,20 @@
         <!-- / Layout page -->
     </div>
 
-    <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
     <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-   <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
-
-
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tablednd@1.0.5/dist/jquery.tablednd.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.min.js"></script>
+    <script src="~/jsPDF/jspdf.umd.min.js"></script>
+    <script src="~/jsPDF/polyfills.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.core.min.js"></script>
 
 
     <!-- Core JS -->
@@ -160,7 +166,6 @@
     <!-- endbuild -->
     <!-- Main JS -->
     <script type="text/javascript" src="/assets/js/main.js"></script>
-
     <!-- Page JS -->
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
 
