--- a/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
+++ b/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
@@ -149,6 +149,7 @@
     <script src="https://cdn.jsdelivr.net/npm/tablednd@1.0.5/dist/jquery.tablednd.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.min.js"></script>
     <script src="~/jsPDF/jspdf.umd.min.js"></script>
+    <script src="~/jsPDF/polyfills.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.core.min.js"></script>
 
 
